Проработано введение. Добавил степень проработанности темы.

--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -156,6 +156,104 @@
   language = {english}
 }
 
+@phdthesis{harkegaard2003backstepping,
+  title={Backstepping and control allocation with applications to flight control},
+  author={H{\"a}rkeg{\aa}rd, Ola},
+  year={2003},
+  school={Link{\"o}pings universitet},
+  language = {english}
+}
+
+@article{harkegaard2004dynamic,
+  title={Dynamic control allocation using constrained quadratic programming},
+  author={H{\"a}rkeg{\aa}rd, Ola},
+  journal={Journal of Guidance, Control, and Dynamics},
+  volume={27},
+  number={6},
+  pages={1028--1034},
+  year={2004},
+  language = {english}
+}
+
+@inproceedings{baldini2020constrained,
+  title={Constrained Control Allocation for a Remotely Operated Vehicle with Collective Azimuth Thrusters},
+  author={Baldini, Alessandro and Felicetti, Riccardo and Ferracuti, Francesco and Freddi, Alessandro and Longhi, Sauro and Monteri{\`u}, Andrea},
+  booktitle={2020 28th Mediterranean Conference on Control and Automation (MED)},
+  pages={1021--1026},
+  year={2020},
+  organization={IEEE},
+  language = {english}
+}
+
+@article{baldini2018constrained,
+  title={A Constrained Thrust Allocation Algorithm for Remotely Operated Vehicles},
+  author={Baldini, Alessandro and Fasano, Antonio and Felicetti, Riccardo and Freddi, Alessandro and Longhi, Sauro and Monteri{\`u}, Andrea},
+  journal={IFAC-PapersOnLine},
+  volume={51},
+  number={29},
+  pages={250--255},
+  year={2018},
+  publisher={Elsevier},
+  language = {english}
+}
+
+@inproceedings{ahmad2007control,
+  title={Control allocation with actuator dynamics for aircraft flight controls},
+  author={Ahmad, Hammad and Young, Trevor and Toal, Daniel and Omerdic, Edin},
+  booktitle={7th AIAA ATIO Conf, 2nd CEIAT Int'l Conf on Innov and Integr in Aero Sciences, 17th LTA Systems Tech Conf; followed by 2nd TEOS Forum},
+  pages={7828},
+  year={2007},
+  language = {english}
+}
+
+@article{omerdic2020geometric,
+  title={Geometric Insight into the Control Allocation Problem for Open-Frame ROVs and Visualisation of Solution},
+  author={Omerdic, Edin and Trslic, Petar and Kaknjo, Admir and Weir, Anthony and Rao, Muzzafar and Dooly, Gerard and Toal, Daniel},
+  journal={Robotics},
+  volume={9},
+  number={1},
+  pages={7},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute},
+  language = {english}
+}
+
+@article{capocci2018fault,
+  title={Fault-tolerant control for ROVs using control reallocation and power isolation},
+  author={Capocci, Romano and Omerdic, Edin and Dooly, Gerard and Toal, Daniel},
+  journal={Journal of Marine Science and Engineering},
+  volume={6},
+  number={2},
+  pages={40},
+  year={2018},
+  publisher={Multidisciplinary Digital Publishing Institute},
+  language = {english}
+}
+
+@article{naderi2019guaranteed,
+  title={Guaranteed feasible control allocation using model predictive control},
+  author={Naderi, Mehdi and Sedigh, Ali Khaki and Johansen, Tor Arne},
+  journal={Control Theory and Technology},
+  volume={17},
+  number={3},
+  pages={252--264},
+  year={2019},
+  publisher={Springer},
+  language = {english}
+}
+
+@article{naderi2019fault,
+  title={A fault tolerant control scheme using the feasible constrained control allocation strategy},
+  author={Naderi, Mehdi and Johansen, Tor Arne and Sedigh, Ali Khaki},
+  journal={International Journal of Automation and Computing},
+  volume={16},
+  number={5},
+  pages={628--643},
+  year={2019},
+  publisher={Springer},
+  language = {english}
+}
+
 @article{10.1049/iet-cta.2009.0265, 
   year = {2010}, 
   title = {{Position-tracking control of underactuated autonomous underwater vehicles in the presence of unknown ocean currents}}, 
@@ -245,6 +343,28 @@
   number={5},
   pages={1000--1007},
   year={1995},
+  language = {english}
+}
+
+@article{durham1994constrained,
+  title={Constrained control allocation-Three-moment problem},
+  author={Durham, Wayne C},
+  journal={Journal of Guidance, Control, and Dynamics},
+  volume={17},
+  number={2},
+  pages={330--336},
+  year={1994},
+  language = {english}
+}
+
+@article{durham2001computationally,
+  title={Computationally efficient control allocation},
+  author={Durham, Wayne C},
+  journal={Journal of Guidance, Control, and Dynamics},
+  volume={24},
+  number={3},
+  pages={519--524},
+  year={2001},
   language = {english}
 }
 
