--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -12,10 +12,16 @@
 
 В общем случае задача распределения управляющих воздействий для случая избыточных систем управления ведет к задаче численной оптимизации с линейными ограничениями, решение которой сложно реализовать для высокочастотных управляющих контуров в условиях операционных систем реального времени.
 
-В настоящее время имеется достаточное количество обзорных статей в иностранной научной литературе, посвященных задаче распределения управляющих воздействий, включая как отдельные приложения – суда, подводные аппараты  \cite{fossen2006survey}, летательные средства \cite{oppenheimer2006control}, так и междисциплинарные \cite{10.1016/j.automatica.2013.01.035}.
-В отечественной литературе такая постановка задачи обычно не выделяется в отдельный класс \cite{филаретов2016особенности} и, например, задача аккомодации к отказам исполнительных механизмов решается в рамках управления объектом целиком  \cite{мартынова2020подход, зыбин2014аналитическое}.
+{\progress}
+В настоящее время имеется достаточное количество обзорных статей в иностранной научной литературе, посвященных задаче распределения управляющих воздействий, включая как отдельные приложения – суда и подводные аппараты \cite{fossen2006survey}, летательные средства \cite{oppenheimer2006control}, так и междисциплинарные \cite{10.1016/j.automatica.2013.01.035} в рамках которой рассматриваются различные методы распределения управляющих воздействий в приложении к различным областям робототехники.
+В отечественной литературе такая постановка задачи обычно не выделяется в отдельный класс \cite{филаретов2016особенности} и, например, задача аккомодации к отказам исполнительных механизмов решается в рамках управления объектом целиком \cite{мартынова2020подход, зыбин2014аналитическое}.
 Впрочем, упоминание задачи распределения управляющих воздействий можно найти в отдельных статьях \cite{амбросовский2013распределение, воловодов2003распределение, амбросовский2014алгоритмы} и главах диссертаций \cite{власов2016адаптивное}.
 
+Актуальность задачи распределения управляющих воздействий описана в большей степени в трудах зарубежных ученых Wayne C. Durham \cite{durham1993constrained, bordingnon1995closed, durham1994constrained, durham2001computationally} Ola Härkegård \cite{10.1016/j.automatica.2004.09.007, harkegaard2003backstepping, harkegaard2004dynamic}, коллектива учёных Thor I. Fossen и Tor A. Johansen (\cite{fossen2006survey, 10.1016/j.automatica.2013.01.035, 10.1109/tcst.2003.821952}), Alessandro Baldini \cite{baldini2018constrained, baldini2020constrained}, Edin Omerdic \cite{ahmad2007control, omerdic2020geometric, capocci2018fault}, Mehdi Naderi \cite{naderi2019guaranteed, naderi2019fault} и др.
+
+{\object} является движительно-рулевой комплекс автономного необитаемого подводного аппарата.
+
+{\subject} является алгоритмы и методы управления движительно-рулевым автономного необитаемого подводного аппарата, методы идентификации параметров его работы, численные методы и комплексы программ для реализации методов управления им.
 % \ifsynopsis
 % Этот абзац появляется только в~автореферате.
 % Для формирования блоков, которые будут обрабатываться только в~автореферате,
@@ -28,12 +34,6 @@
 % документа (\verb!dissertation.tex! для диссертации), можно сделать новую
 % команду, обеспечивающую появление цитаты в~диссертации, но~не~в~автореферате.
 % \fi
-
-% {\progress}
-% Этот раздел должен быть отдельным структурным элементом по
-% ГОСТ, но он, как правило, включается в описание актуальности
-% темы. Нужен он отдельным структурынм элемементом или нет ---
-% смотрите другие диссертации вашего совета, скорее всего не нужен.
 
 {\aim} диссертационной работы является разработка методов энергоэффективного и отказоустойчивого управления избыточным движительно-рулевым комплексом подводного аппарата с учётом динамики исполнительных механизмов и их гидродинамических особенностей.
 
