--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -4,9 +4,13 @@
 % 9.2.1 Общая характеристика работы включает в себя следующие основные структурные
 % элементы:
 % актуальность темы исследования;
-\newcommand{\actualityTXT}{Актуальность темы.}
+\newcommand{\actualityTXT}{Актуальность темы диссертации.}
 % степень ее разработанности;
 \newcommand{\progressTXT}{Степень разработанности темы.}
+% Объект исследования
+\newcommand{\objectTXT}{Объектом исследования}
+% предмет исследования
+\newcommand{\subjectTXT}{Предметом исследования}
 % цели и задачи;
 \newcommand{\aimTXT}{Целью}
 \newcommand{\tasksTXT}{задачи}
