--- a/Dissertation/introduction.tex
+++ b/Dissertation/introduction.tex
@@ -1,8 +1,10 @@
 \chapter*{Введение}                         % Заголовок
 \addcontentsline{toc}{chapter}{Введение}    % Добавляем его в оглавление
 
-\newcommand{\actuality}{}
-\newcommand{\progress}{}
+\newcommand{\actuality}{\textbf\actualityTXT}
+\newcommand{\progress}{\textbf\progressTXT}
+\newcommand{\object}{\textbf\objectTXT}
+\newcommand{\subject}{\textbf\subjectTXT}
 \newcommand{\aim}{{\textbf\aimTXT}}
 \newcommand{\tasks}{\textbf{\tasksTXT}}
 \newcommand{\novelty}{\textbf{\noveltyTXT}}
