Иправил мелкие косяки.

--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -346,7 +346,7 @@
 \end{itemize}
 
 \section{Численное моделирование поведения исполнителнительных механизмов ДРК в набегающем потоке}
-\subsection{Моделирование маршевого двигателя}
+\subsection{Моделирование маршевого движителя}
 В рамках исследования необходимо определить насколько меняется поведение ИМ ДРК при движении АНПА в набегающем потоке.
 Для численного анализа поведения маршевого движителя в набегающем потоке была разработана его блочная модель (рисунок \ref{fig:modelling-thruster}), где модель привода движителя описывается в соответствии с системой дифференциальных уравнений \ref{eq:motor_model}, а модель гребного винта - в соответствии с уравнениями \ref{eq:propeler_model}.
 Параметры моделирования представлены в таблице \ref{tab:modelling-thruster}.
@@ -400,8 +400,8 @@
     \label{fig:modelling-thruster-code}
 \end{figure}
 
-\subsection{Моделирование подруливающего двигателя}
-В соответствии с моделью влияния набегающего потока на эффективность маршевого двигателя для численного анализа поведения подруливающего движителя была создана модель его блочная модель.
+\subsection{Моделирование подруливающего движителя}
+В соответствии с моделью влияния набегающего потока на эффективность маршевого движителя для численного анализа поведения подруливающего движителя была создана модель его блочная модель.
 Все параметры модели движителя и гребного винта соответствуют параметрам указанным в таблице \ref{tab:modelling-thruster}.
 Коэффицент подавления потока $C$ был принят с величиной 5.0.
 В рамках реализованной модели подруливающего движителя был проведен численное моделирование влияния соосного набегающего потока на эффективное значение упор создаваемый подруливащим движителем при различных значениях набегающего потока (рисунок \ref{fig:modelling-tunnel-velocity})
