--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -134,7 +134,7 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - общий вид.png}
-    \caption{Общий вид аппарата АНПА ``ММТ-3000''}
+    \caption{Общий вид аппарата АНПА ``ММТ-3000''.}
     \label{fig:mmt-3000}
 \end{figure}
 
@@ -350,4 +350,4 @@
     \label{fig:mmt3000_velocity_check}
 \end{figure}
 
-\section{Выводы по 2}
+\section{Выводы по главе 3}
