Заготовки под будущие главы.

--- a/Dissertation/partExperiment.tex
+++ b/Dissertation/partExperiment.tex
@@ -209,3 +209,10 @@
         -(x_gW - x_bB)\cos{\theta} \sin{\phi} - (y_gW - y_bB) \sin{\theta}
     \end{bmatrix}
 \end{equation*}
+
+\section{Реализация модели динамики АНПА}\label{sec:Experiment/ModelImplement}
+
+
+\section{Сравнение различных методов управления ДРК на примере переходного процесса по глубине}\label{sec:Experiment/Test}
+
+\section{Выводы по главе 5}
