--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -107,7 +107,7 @@
 \end{equation}
 \noindent где $\epsilon \geq 0$ представляет собой бесконечно малую добавку фактически не влияющую на решение задачи, но обеспечивающую существование обратной матрицы.
 
-\subsubsection{Прямое распределение с масштабированием}
+\subsubsection{Прямое распределение с масштабированием} \label{sssec:AllocationFix}
 Данный подход не обеспечивает оптимального решения, но позволяет получить его в условиях линейных ограничений $\vect{u} \in \mathspace{U} \subset \mathspace{R}^k$ накладываемых на исполнительные механизмы.
 Данный метод подразумевает поиск такого набора линейных положительных сжимающих коэффициентов $\vect{\alpha} \in [0,1]$, при котором решение задачи распределения управляющего воздействия не выходит за рамки допустимого множества $\mathspace{U}$ \cite{durham1993constrained}, при этом новая линейная оптимизационная задача ставится следующим образом:
 \begin{gather}
@@ -268,6 +268,8 @@
     \item ACADO -- специальная программная среда и набор алгоритмов для решения задачи квадратичной оптимизации с ограничениями, динамической оптимизации, задачи MPC. В составе пакета есть специальные методы для автоматической генерации С кода \cite{houska2011acado}.
     \item MPT (Multi-Parametric Toolbox) -- специальный бесплатный пакет к MATLAB включающий в себя реализацию оптимального управления линейными, гибридными и нелинейными системами. Может быть задан линейный и квадратичный функционал качества. Есть автоматическая генерация кода на языке С \cite{kvasnica2004multi}.
 \end{itemize}
+
+\section{Особенности отказоустойчивых методов управления ДРК}\label{sec:Propulsion/FaultToulerant}
 
 \section{Постановка цели и задач исследования}\label{sec:Statement/SetProblems}
 
