Чутка расширил четвертую главу в части сравнения с текущим методом.

--- a/Dissertation/partAllocation.tex
+++ b/Dissertation/partAllocation.tex
@@ -1,6 +1,6 @@
 \chapter{Разработка адаптивного к скорости метода управления ДРК ПА}\label{ch:Allocation}
 
-\section{Формальное описание структуры ДРК}\label{sec:Propulsion/System}
+\section{Формальное описание структуры ДРК}\label{sec:Allocation/System}
 Движители в системе можно разделить на три больших класса \cite{армишев86}:
 \begin{itemize}
     \item \textbf{фиксированные}, когда вектор упора может изменяться только вдоль фиксированной относительно ПА прямой.
@@ -286,3 +286,75 @@
     \item $u$ -- скорость потока воды набегаемой на аппарат при его движении;
     \item $X_{\delta_i, \delta_i}, \ldots, N_{\delta_i}$ -- коэффициент сил и моментов создаваемых РУ при скорости набегаемого потока $u$.
 \end{itemize}
+
+\section{Формирование фиксированных пропорций значений целевого управления}\label{sec:Allocation/System}
+
+\section{Метод адаптивного управления ДРК ПА} \label{sec:Allocation/Method}
+
+\section{Моделирование работы предлагаемого метода управления ДРК при различных скоростях набегающего потока} \label{sec:Allocation/Test}
+Численное моделирование разработанного алгоритма проводилось на модели АНПА ``ММТ-300'' спроектированного и разработанного в ИПМТ ДВО РАН.
+Он оснащен четырьмя маршевыми движителями, расположенными в корме аппарата и двумя подруливающими движителями - в горизонтальной и вертикальной плоскостях.
+Положение и ориентация каждого движителя представлена в таблице \ref{tab:mmt300_propulsion}.
+В таблице \ref{tab:mmt300_propulsion} уголы $\psi$ и $\theta$ определяют отклонение вектора формирования упора движителя от продольной оси аппарата в горизонтальной и вертикальной плоскости соответственно.
+Координата в ССК определяет положение движителя в системе координат связанной с ЦМ ПА, где ось $x$ направлена вдоль продольной оси аппарата с кормы в нос, ось $y$ направлена вдоль поперечной оси аппарата от левого бока на правый и ось $z$ достраивает СК до правосторонней.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/Распределение - вид ММТ300.jpg}
+    \caption{Общий вид аппарата АНПА ``ММТ-300''.}
+    \label{fig:mmt-300}
+\end{figure}
+
+\begin{table}
+    \caption{Параметры ДРК АНПА ``ММТ-300''.}
+    \label{tab:mmt300_propulsion}
+    \centering
+    \begin{tabular}{lll}
+        \toprule
+        Тип движителя & \makecell[l]{Пространственная ориентация \\ $(\psi, \theta)$, $^{\circ}$} & \makecell[l]{Координата в ССК \\ 
+        $(x,y,z)$, м} \\
+        \midrule
+        Левый   кормовой & (-22.5, 0) & (-1.60,-0.14,0) \\
+        Правый  кормовой & (22.5, 0)  & (-1.60,0.14,0) \\
+        Нижний  кормовой & (0, -22.5) & (-1.60,0,0.14) \\
+        Верхний кормовой & (0, 22.5)  & (-1.60,0,-0.14) \\
+        \makecell[l]{Подруливающий \\ вертикальный}   & (0, 90) & (0.3,0.0,0,0) \\
+        \makecell[l]{Подруливающий \\ горизонтальный} & (90, 0) & (1.0,0.0,0,0) \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+В рамках исследования было произведено сравнение работы предлагаемого метода с методом распределения управляющего воздействия, который реализован на АНПА ``ММТ-300'' и описан в разделе \ref{sssec:AllocationFix}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/Результат - Стандартный упоры.png}
+    \caption{Распределение управления методом прямого распределения с масштабированием.}
+    \label{fig:mmt-300-allocation-fix-thrust}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/Результат - Стандартный силы.png}
+    \caption{Силы и моменты при прямом распределении с масштабированием.}
+    \label{fig:mmt-300-allocation-fix-force}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/Результат - Адаптивный Упоры.png}
+    \caption{Распределение управления предлагаемым методом.}
+    \label{fig:mmt-300-allocation-optimal-thrust}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/Результат - Адаптивный силы.png}
+    \caption{Силы и моменты при предлагаемом методе.}
+    \label{fig:mmt-300-allocation-optimal-force}
+\end{figure}
+
+\section{Структура программного обеспечения для реализации предложенного метода} \label{sec:Allocation/Software}
+
+
+\section{Выводы по главе 4}
