Расширена часть про метод распределения. Добавлены ссылки.

--- a/Dissertation/partAllocation.tex
+++ b/Dissertation/partAllocation.tex
@@ -1,6 +1,10 @@
 \chapter{Разработка адаптивного к скорости метода управления ДРК ПА}\label{ch:Allocation}
 
 \section{Формальное описание структуры ДРК}\label{sec:Allocation/System}
+\begin{noteplan}
+	Думаю эту секцию перенесу во вторую главу. А здесь оставлю только анализ матрицы геометрии ДРК.
+\end{noteplan}
+
 Движители в системе можно разделить на три больших класса \cite{армишев86}:
 \begin{itemize}
     \item \textbf{фиксированные}, когда вектор упора может изменяться только вдоль фиксированной относительно ПА прямой.
@@ -250,6 +254,9 @@
 \end{equation}
 
 \section{Учет рулей управления в матрице структуры ДРК ПА}
+\begin{noteplan}
+	Эта часть еще сырая, буду её серьезно перерабатывать.
+\end{noteplan}
 Уравнение \ref{eq:propulsion_connection} не поддерживает рули управления как один из способов контроля движения ПА.
 Это исторически отдельная задача и ей посвящено достаточно много литературы в области управления летательными аппаратами, но рули управления также широко распространены и в подводных аппаратах, и задача распределения управляющих воздействий между этими исполнительными механизмами остаётся актуальной.
 
@@ -291,7 +298,102 @@
 
 \section{Метод адаптивного управления ДРК ПА} \label{sec:Allocation/Method}
 
+\subsection{Задача оптимального управления ДРК ПА}
+\begin{notequestion}
+	Заново постановка задачи оптимального управления ДРК. Для тех кто забыл всё из первой главы пока до сюда добрался.
+	Может и не писать?
+\end{notequestion}
+Согласно выражению \ref{eq:Statement/AllocationProblem} задача оптимального управления ДРК ПА ставится следующим образом:
+
+\begin{equation}
+	\label{eq:Allocation/Problem}
+	\begin{matrix}
+		\min \left( ||Q_s|| + J(\vect{x}, \vect{u}, t) \right) \\
+		\text{при условии } \\
+    	\vect{\nu}-B(\vect{x})\vect{u} = \vect{s}, u \in \mathspace{U}
+	\end{matrix}
+\end{equation}
+\noindent где:
+\begin{itemize}
+	\item $\vect{\nu}$ -- целевой вектор виртуального управления;
+	\item $\vect{u}$ -- вектор управления исполнительными механизмами;
+	\item $B$ -- матрица геометрии движительно-рулевого комплекса;
+    \item $s$ -- невязку вектора виртуального управления, которая определяет меру различия между заданным и сформированным вектором управления;
+    \item $Q_{\nu}$ -- матрица, формализующая приоритеты работы тех или иных осей управления при выходе вектора $\nu$ за пределы допустимого множества $\mathspace{A}$.
+    \item $J(\vect{x}, \vect{u}, t)$ -- некоторый функционал качества.
+\end{itemize}
+
+В разделе \ref{sec:Statement/Methods} перечислены различные методы используемые для решения задачи управления избыточного ДРК ПА, как оптимальные так и нет.
+Все методы имеют свои преимущества и недостатки.
+
+\subsection{Решение задачи оптимизации через теорему о сжимающем прострастве}
+
+\begin{noteplan}
+	Это пока ядро метода. Ещё будет добавлена модификация матрицы в случае подруливающих движителей, рулей и добавлена матрица отказоустойчивости.
+\end{noteplan}
+
+В рамках исследования было предложено использовать новый математический метод решения задачи управления ДРК в рамках которого поиск минимума  $J(\vect{x}, \vect{u}, t)$ может быть сформулирован через теорему о неподвижной точке в сжимающем пространстве \cite{rhoades2004quadratic}, который было предложено применять для рулей управления АНПА в работе \cite{zhang2017design}.
+
+Пусть функционал $J(\vect{x}, \vect{u}, t)$ задан в рамках минимазации потребления энергии исполнительными механизмами ДРК следующим образом \cite{burken2001two}:
+\begin{equation}
+    J = (1-\varepsilon)(B\vect{u} - \vect{\nu})^TQ_1(B\vect{u} - \vect{\nu}) + \varepsilon 
+    \vect{u}^TQ_2\vect{u}
+\end{equation}
+\noindent где:
+\begin{itemize}
+    \item $\varepsilon$ -- некоторый множитель меньше 1;
+    \item $Q_{\nu}=W^T_{\nu}W_{\nu}$, где $W_{\nu}$ -- диагональная матрица положительно определенных весовых коэффициентов осей управления;
+    \item $Q_{u}=W^T_{u}W_{u}$, где $W_u$ -- диагональная матрица положительно определенных весовых коэффициентов ИМ;
+\end{itemize}
+
+Тогда инеративное решение оптимизационной задачи \ref{eq:Allocation/Problem} может быть найдено следующим образом:
+\begin{equation}
+	\label{eq:Allocation/FixedMethod}
+    \vect{u}_{n+1} = \text{sat}
+    \left[
+    (1-\varepsilon)\omega B^TQ_{\nu}\nu - (\omega H - I) \vect{u}_{n}
+    \right]
+\end{equation}
+\noindent где:
+\begin{itemize}
+	\item $H=(1 - \varepsilon)B^TQ_1B + \varepsilon Q_2$;
+	\item $\omega = 1 / ||H||_2$;
+	\item $I$ -- диагональная единичная матрица;
+	\item $\vect{u}_{n+1}$ -- вектор управления исполнительными механизмами на $\vect{u}$ шаге итерационного расчёта.
+\end{itemize}
+
+Функция $\text{sat}(x)$ определяет поведение выражения \ref{eq:Allocation/FixedMethod} при $\vect{u} \notin \mathspace{U}$ следующим образом:
+\begin{equation*}
+	\text{sat}(x) = 
+	\left\{
+	\begin{array}{lll}
+		u^{min}, &&x < u^{min} \\
+		x,         &u^{min} < &x < u^{max} \\
+		u^{max}, &u^{max} < &x 
+	\end{array}
+	\right.
+\end{equation*}
+
+Итеративный расчёт вектора $\vect{u}_{n}$ заканчивается при выполнении следующего неравенства:
+\begin{equation*}
+	\left| J(\vect{u}_{k+1}) - J(\vect{u}_{k}) \right| < J_{end}
+\end{equation*}
+\noindent где $J_{end}$ -- настраиваемый параметр, который зависит от дискретности управления исполнительными механизмами ДРК.
+
+\begin{notequestion}
+	По-хорошему, надо задать конкретные правила формирования $J_{end}$.
+\end{notequestion}
+\section{Сравнительный анализ основных параметров работы метода адапативного управдения ДРК ПА} \label{sec:Allocation/Compare}
+\begin{noteplan}
+	Тут будет сравнительная характеристика различных подходов. Как в статье на УМС.
+\end{noteplan}
+
 \section{Моделирование работы предлагаемого метода управления ДРК при различных скоростях набегающего потока} \label{sec:Allocation/Test}
+
+\begin{noteplan}
+	Тут я по сути пока вставил просто картинки. Потом подробнее опишу методологию модельного эксперимента.
+\end{noteplan}
+
 Численное моделирование разработанного алгоритма проводилось на модели АНПА ``ММТ-300'' спроектированного и разработанного в ИПМТ ДВО РАН.
 Он оснащен четырьмя маршевыми движителями, расположенными в корме аппарата и двумя подруливающими движителями - в горизонтальной и вертикальной плоскостях.
 Положение и ориентация каждого движителя представлена в таблице \ref{tab:mmt300_propulsion}.
@@ -355,6 +457,15 @@
 \end{figure}
 
 \section{Структура программного обеспечения для реализации предложенного метода} \label{sec:Allocation/Software}
-
+\begin{noteplan}
+	Добавлю структурное описание ПО для реализации метода распределения.
+\end{noteplan}
 
 \section{Выводы по главе 4}
+\begin{noteplan}
+	Выводы что метод позоляет отказоустойчиво распределять управляющее воздействие с учетом подруливающих особенностей ДРК.
+\end{noteplan}
+
+\begin{notequestion}
+	Надо как-то выйти на то, что используется скорость полученная в третьей главе. Или это уже в финальной главе обьединить?
+\end{notequestion}
