--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -291,7 +291,7 @@
 }
 
 @article{борейко2011малогабаритный,
-  title={Малогабаритный многофункциональный автономный необитаемый подводный аппарат" МТ-2010"},
+  title={Малогабаритный многофункциональный автономный необитаемый подводный аппарат ``МТ-2010''},
   author={Борейко, АА and Горнак, ВЕ and Мальцева, СВ and Матвиенко, ЮВ and Михайлов, ДН},
   journal={Подводные исследования и робототехника},
   number={2},
@@ -302,7 +302,7 @@
 }
 
 @article{горнак2007ммт,
-  title={ММТ-3000-новый малогабаритный автономный необитаемый подводный аппарат Института проблем морских технологий ДВО РАН},
+  title={ММТ-3000 -- новый малогабаритный автономный необитаемый подводный аппарат Института проблем морских технологий ДВО РАН},
   author={Горнак, ВЕ and Икзарцев, АВ and Львов, ОЮ and Матвиенко, ЮВ and Щербатюк, АФ and Инзарцев, АВ},
   journal={Подводные исследования и робототехника},
   number={1},
@@ -917,7 +917,8 @@
   title={Motstand, Framdrift, Styring},
   author={Walderhaug, H},
   journal={Lecture Notes, Department of Marine Hydrodynamics, Norwegian University of Science and Technology (in Norwegian)},
-  year={1992}
+  year={1992},
+  language={english}
 }
 
 @article{10.1109/48.838987, 
@@ -1066,5 +1067,41 @@
   number={04},
   pages={439--453},
   year={1972},
-  publisher={OnePetro}
+  publisher={OnePetro},
+  language={english}
+}
+
+@article{burken2001two,
+  title={Two reconfigurable flight-control design methods: Robust servomechanism and control allocation},
+  author={Burken, John J and Lu, Ping and Wu, Zhenglu and Bahm, Cathy},
+  journal={Journal of Guidance, Control, and Dynamics},
+  volume={24},
+  number={3},
+  pages={482--493},
+  year={2001},
+  language={english}
+}
+
+@article{zhang2017design,
+  title={Design of X-rudder autonomous underwater vehicle’s quadruple-rudder allocation with L{\'e}vy flight character},
+  author={Zhang, Yinghao and Li, Yueming and Zhang, Guocheng and Zeng, Jiangfeng and Wan, Lei},
+  journal={International Journal of Advanced Robotic Systems},
+  volume={14},
+  number={6},
+  pages={1729881417741738},
+  year={2017},
+  publisher={SAGE Publications Sage UK: London, England},
+  language={english}
+}
+
+@article{rhoades2004quadratic,
+  title={Quadratic optimization of fixed points for a family of nonexpansive mappings in Hilbert space},
+  author={Rhoades, BE},
+  journal={Fixed Point Theory and Applications},
+  volume={2004},
+  number={2},
+  pages={1--13},
+  year={2004},
+  publisher={Springer},
+  language={english}
 }
